--- a/index.html
+++ b/index.html
@@ -11,28 +11,23 @@
     <title>Ex01_Bootstrap</title>
 </head>
 <body>
-  <!-- Image and text -->
-<nav class="navbar navbar-dark bg-info text-white">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-      <img src="https://img.evbuc.com/https%3A%2F%2Fcdn.evbuc.com%2Fimages%2F50864249%2F171175753971%2F1%2Foriginal.jpg?auto=compress&s=68c351ecccc8018ed8c3ee75fffce626" alt="" width="45" height="30" class="d-inline-block align-top">
-      Logo
-    </a>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+  <!-- NavBar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-info text-white">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="https://img.evbuc.com/https%3A%2F%2Fcdn.evbuc.com%2Fimages%2F50520062%2F171175753971%2F1%2Foriginal.jpg?auto=compress&s=53e69ca2e1493adfe6e1192164a0a666" alt="" width="50" height="35" class="d-inline-block align-top">
+          Logo
+        </a>
+        </button>
+        <div class="collapse navbar-collapse d-flex" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">Pricing</a>
+          </div>
+        </div>
+      </div>
+    </nav>
 
 </body>
 </html>
