--- a/index.html
+++ b/index.html
@@ -19,15 +19,186 @@
           Logo
         </a>
         </button>
-        <div class="collapse navbar-collapse d-flex" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav"> 
             <a class="nav-link active" aria-current="page" href="#">Home</a>
             <a class="nav-link" href="#">Features</a>
             <a class="nav-link" href="#">Pricing</a>
           </div>
         </div>
-      </div>
+      </div>                
     </nav>
+<!--1ère section-->
+<!--Espace blanc au dessus-->
+    <div class="container">
+      <div class="row" height="50px">
+        <div class="col">
+        </div>
+        <div class="col-6">
+          <img src="#" height="30px" p-t alt="">
+        </div>
+        <div class="col">
+        </div>
+      </div>
+    </div>
+<!--image Bootstrap-->
+    <div class="container">
+      <div class="row">
+        <div class="col">
+        </div>
+        <div class="col-6">
+          <img src="./public/Screenshot 2021-01-06 at 12.02.58.png" width="100%" height="200px" alt="">
+        </div>
+        <div class="col">
+        </div>
+      </div>
+    </div>
+<!--cards-->
 
+<!--espace au dessus-->
+    <div class="container">
+      <div class="row" height="50px">
+        <div class="col">
+        </div>
+        <div class="col-6">
+          <img src="#" height="30px" p-t alt="">
+        </div>
+        <div class="col">
+        </div>
+      </div>
+    </div>
+<!--Espace à gauche-->
+    <div class="container">
+      <div class="row">
+        <div class="col">
+        </div>
+<!--Case en haut à gauche-->
+        <div class="col">
+          <div class="card mb-3 border-0" style="max-width: 540px;">
+            <div class="row g-0 border-none">
+              <div class="col-md-4">
+                <img src="./public/Screenshot 2021-01-06 at 12.34.31.png" alt="..." height="100px" width="100px">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Nom prénom</h5>
+                  <p class="card-text">Lorem ipsum dolor sit.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+<!--Case en haut à droite-->
+          <div class="col">
+            <div class="card mb-3 border-0" style="max-width: 540px;">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="./public/Screenshot 2021-01-06 at 12.34.36.png" alt="..." height="100px" width="100px">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Nom prénom</h5>
+                    <p class="card-text">Lorem ipsum dolor sit.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+<!--espace à droite-->
+          <div class="col">
+          </div>
+      </div>
+    </div>
+<!--Etage du bas-->
+<!--Espace à gauche-->
+<div class="container">
+  <div class="row">
+    <div class="col">
+    </div>
+<!--Case en haut à gauche-->
+    <div class="col">
+      <div class="card mb-3 border-0" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="./public/Screenshot 2021-01-06 at 12.34.40.png" alt="..." height="100px" width="100px">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Nom prénom</h5>
+              <p class="card-text">Lorem ipsum dolor sit.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+<!--Case en haut à droite-->
+      <div class="col">
+        <div class="card mb-3 border-0" style="max-width: 540px;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="./public/Screenshot 2021-01-06 at 12.34.44.png" alt="..." height="100px" width="100px">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Nom prénom</h5>
+                <p class="card-text">Lorem ipsum dolor sit.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+<!--espace à droite-->
+      <div class="col">
+      </div>
+  </div>
+</div>
+
+<!--Footer-->
+
+<!--espace au dessus-->
+<div class="container">
+  <div class="row" height="50px">
+    <div class="col">
+    </div>
+    <div class="col-6">
+      <img src="#" height="30px" p-t alt="">
+    </div>
+    <div class="col">
+    </div>
+  </div>
+</div>
+
+<!--Partie de gauche-->
+<section class="bg-info text-white">
+<!--espace au dessus-->
+<div class="container">
+  <div class="row" height="50px">
+    <div class="col">
+    </div>
+    <div class="col-6">
+      <img src="#" height="30px" p-t alt="">
+    </div>
+    <div class="col">
+    </div>
+  </div>
+</div>
+<!--début texte-->
+<div class="container ">
+    <div class="row text-center">
+      <div class="col-6">
+        <p class="fs-4">Informations sur la coding coding</p>
+        <p>Ici on a toutes les info sur la coding school qui est une super formation pour apprendre à développer des sites (et des applications) web</p>
+      </div>
+      <!--Partie de droite-->
+      <div class="col-6">
+        <form class="d-flex">
+          <p>Newsletter</p>
+          <input class="form-control" type="search" aria-label="Search">
+          <button class="btn btn-dark" type="submit">Subscribe</button>
+        </form>
+      </div>
+    </div>
+</div>
+</section>
 </body>
 </html>
