--- a/index.html
+++ b/index.html
@@ -8,200 +8,35 @@
      <!--Lien CSS-->
      <link rel="stylesheet" href="./public/css/style.css">
 
-    <title>Ex01_Bootstrap</title>
+    <title>Ex02_Bootstrap</title>
 </head>
 <body>
   <!-- NavBar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-info text-white">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="https://img.evbuc.com/https%3A%2F%2Fcdn.evbuc.com%2Fimages%2F50520062%2F171175753971%2F1%2Foriginal.jpg?auto=compress&s=53e69ca2e1493adfe6e1192164a0a666" alt="" width="50" height="35" class="d-inline-block align-top">
-            Logo</a>
-        </div>
-        <div class="position-relative">
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav"> 
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">Features</a>
-              <a class="nav-link" href="#">Pricing</a>
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary text-white">
+      <div class="container text-center">
+          <p class="navbar-brand " href="#">FLATI</p>
+      </div>
+      <div class="container mx-auto">
+        <div class="collapse navbar-collapse align-text-top" id="navbarNavAltMarkup">
+          <div class="navbar-nav"> 
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" href="#">Pages</a>
+            <a class="nav-link" href="#">Work</a>
+            <a class="nav-link" href="#">Style</a>
+            <a class="nav-link" href="#">Extras</a>
+            <a class="nav-link" href="#">Blog</a>
+            <a class="nav-link" href="#">Contact</a>
           </div>
-        </div>               
+        </div>
+      </div>               
     </nav>
 <!--1ère section-->
-<!--Espace blanc au dessus-->
-    <div class="container">
-      <div class="row" height="50px">
-        <div class="col">
-        </div>
-        <div class="col-6">
-          <img src="#" height="30px" p-t alt="">
-        </div>
-        <div class="col">
-        </div>
-      </div>
-    </div>
-<!--image Bootstrap-->
-    <div class="container">
-      <div class="row">
-        <div class="col">
-        </div>
-        <div class="col-6">
-          <img src="./public/Screenshot 2021-01-06 at 12.02.58.png" width="100%" height="200px" alt="">
-        </div>
-        <div class="col">
-        </div>
-      </div>
-    </div>
-<!--cards-->
-
-<!--espace au dessus-->
-    <div class="container">
-      <div class="row" height="50px">
-        <div class="col">
-        </div>
-        <div class="col-6">
-          <img src="#" height="30px" p-t alt="">
-        </div>
-        <div class="col">
-        </div>
-      </div>
-    </div>
-<!--Espace à gauche-->
-    <div class="container">
-      <div class="row">
-        <div class="col">
-        </div>
-<!--Case en haut à gauche-->
-        <div class="col">
-          <div class="card mb-3 border-0" style="max-width: 540px;">
-            <div class="row g-0 border-none">
-              <div class="col-md-4">
-                <img src="./public/Screenshot 2021-01-06 at 12.34.31.png" alt="..." height="100px" width="100px">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">Nom prénom</h5>
-                  <p class="card-text">Lorem ipsum dolor sit.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-<!--Case en haut à droite-->
-          <div class="col">
-            <div class="card mb-3 border-0" style="max-width: 540px;">
-              <div class="row g-0">
-                <div class="col-md-4">
-                  <img src="./public/Screenshot 2021-01-06 at 12.34.36.png" alt="..." height="100px" width="100px">
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-title">Nom prénom</h5>
-                    <p class="card-text">Lorem ipsum dolor sit.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-<!--espace à droite-->
-          <div class="col">
-          </div>
-      </div>
-    </div>
-<!--Etage du bas-->
-<!--Espace à gauche-->
-<div class="container">
-  <div class="row">
-    <div class="col">
-    </div>
-<!--Case en haut à gauche-->
-    <div class="col">
-      <div class="card mb-3 border-0" style="max-width: 540px;">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="./public/Screenshot 2021-01-06 at 12.34.40.png" alt="..." height="100px" width="100px">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">Nom prénom</h5>
-              <p class="card-text">Lorem ipsum dolor sit.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-<!--Case en haut à droite-->
-      <div class="col">
-        <div class="card mb-3 border-0" style="max-width: 540px;">
-          <div class="row g-0">
-            <div class="col-md-4">
-              <img src="./public/Screenshot 2021-01-06 at 12.34.44.png" alt="..." height="100px" width="100px">
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Nom prénom</h5>
-                <p class="card-text">Lorem ipsum dolor sit.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-<!--espace à droite-->
-      <div class="col">
-      </div>
+<!--Image de bg-->
+<section>
+  <div>
+    <img src="./public/img/bg-header.png" width="100%" alt="">
   </div>
-</div>
-
-<!--Footer-->
-
-<!--espace au dessus-->
-<div class="container">
-  <div class="row" height="50px">
-    <div class="col">
-    </div>
-    <div class="col-6">
-      <img src="#" height="30px" p-t alt="">
-    </div>
-    <div class="col">
-    </div>
-  </div>
-</div>
-
-<!--Partie de gauche-->
-<section class="bg-info text-white">
-<!--espace au dessus-->
-<div class="container">
-  <div class="row" height="50px">
-    <div class="col">
-    </div>
-    <div class="col-6">
-      <img src="#" height="30px" p-t alt="">
-    </div>
-    <div class="col">
-    </div>
-  </div>
-</div>
-<!--début texte-->
-<div class="container ">
-    <div class="row text-center">
-      <div class="col-6">
-        <p class="fs-5">Informations sur la coding coding</p>
-        <p class="fs-6">Ici on a toutes les info sur la coding school qui est une super formation pour apprendre à développer des sites (et des applications) web</p>
-      </div>
-      <!--Partie de droite-->
-      <div class="col-6 align-center">
-        <form class="d-flex col-auto">
-          <div class="d-flex col-auto">
-              <p class="align-center">Newsletter</p>
-              <label for="inputPassword2" class="visually-hidden">Password</label>
-              <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
-              <button class="btn btn-sm btn-dark" type="submit">Subscribe</button>  
-            </div>
-        </form>
-      </div>
-    </div>
-</div>
 </section>
+
 </body>
 </html>
