--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <!-- NavBar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary text-white">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary text-white" >
       <div class="container text-center">
           <p class="navbar-brand " href="#">FLATI</p>
       </div>
@@ -35,6 +35,75 @@
 <section>
   <div>
     <img src="./public/img/bg-header.png" width="100%" alt="">
+  </div>
+</section>
+
+<!--Div background color + texte-->
+<section class="bg-warning">
+  <!--Espace au top-->
+  <div class="container text-center">
+    <div class="row">
+      <div class="col">
+      </div>
+      <div class="col">
+        <p class="text-warning fs-5">hello</p>
+      </div>
+      <div class="col"></div>
+      </div>
+    </div>
+  </div>
+  <!--Texte-->
+  <div class="container text-center">
+    <div class="row">
+      <div class="col">
+      </div>
+      <div class="col">
+        <p class="fs-5">I think most <mark class="bg-info">programmers</mark>  spend the first 5 years of their career mastering
+        <span class="text-info">complexity</span>  and the rest of their lives learning simplicity -</p>
+        <br>
+        <p>Buzz Anderson</p>
+      </div>
+      <div class="col"></div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!---cards--->
+<section>
+  <div class="d-flex container justify-content-evenly">
+    <div class="card" style="width: 18rem;">
+      <img src="./public/img/Screenshot 2021-01-04 at 10.43.22.png" class="card-img-top img-thumbnail" alt="..." >
+      <div class="card-body text-center">
+        <p class="fs-6"><b>Design</b></p>
+        <p class="text-info">Build for & by nerds</p>
+        <p class="card-text">Like you, we love building awesome products on the web. We love it so much, we decided to help people juste like us do it easier, better, adn faster.</p>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="./public/img/Screenshot 2021-01-04 at 10.43.59.png" class="card-img-top img-thumbnail" alt="...">
+      <div class="card-body text-center">
+        <p class="fs-6"><b>Code</b></p>
+        <p class="text-info">Build for & by nerds</p>
+        <p class="card-text">Like you, we love building awesome products on the web. We love it so much, we decided to help people juste like us do it easier, better, adn faster.</p>
+      </div>
+    </div>
+    <div class="card rounded-1" style="width: 18rem;">
+      <img src="./public/img/Screenshot 2021-01-04 at 10.44.18.png " class="card-img-top img-thumbnail" alt="...">
+      <div class="card-body text-center">
+        <p class="fs-6"><b>Create</b></p>
+        <p class="text-info">Build for & by nerds</p>
+        <p class="card-text">Like you, we love building awesome products on the web. We love it so much, we decided to help people juste like us do it easier, better, adn faster.</p>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="./public/img/Screenshot 2021-01-04 at 10.44.28.png" class="card-img-top img-thumbnail" alt="...">
+      <div class="card-body text-center">
+        <p class="fs-6"><b>Support</b></p>
+        <p class="text-info">Build for & by nerds</p>
+        <p class="card-text">Like you, we love building awesome products on the web. We love it so much, we decided to help people juste like us do it easier, better, adn faster.</p>
+      </div>
+    </div>
   </div>
 </section>
 
