--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
   </div>
   <!--Design-->
   <div class="d-flex container justify-content-xl-evenly">
+
     <div class="card" style="width: 15rem;">
       <img src="./public/img/Screenshot 2021-01-04 at 10.43.22.png" class="card-img-top img-thumbnail" alt="..." >
       <div class="card-body text-center">
@@ -135,10 +136,53 @@
     </div>
   </div>
   <div class="container d-flex">
-  <!--dernières cards-->
+<!--dernières cards-->
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+    </div>
+    <div class="col">
+      <p><b>Recent work</b></p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore dignissimos odio nihil enim a, dolore nostrum hic fugiat.</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime, harum! Provident quis voluptas officia velit harum esse magnam dolores. Ea magnam blanditiis aut quidem. Dolore commodi in sed dolorem iure.</p>
+      <button type="button" class="btn btn-primary">View Portfolio</button>
+    </div>
+    <div class="col d-flex">
+      <!--Cards-->
 
-
+    <!--Card 1-->
+    <div class="card" style="width: 12rem;">
+      <img src="./public/img/flati-design-screenshot1.png" class="card-img-top img-thumbnail" alt="...">
+      <div class="card-body text-center bg">
+        <p class="fs-6"><b>Catalogue</b></p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+      </div>
+    </div>
+    <!--Card 2-->
+    <div class="card" style="width: 12rem;">
+      <img src="./public/img/flati-design-screenshot2.png" class="card-img-top img-thumbnail" alt="...">
+      <div class="card-body text-center bg">
+        <p class="fs-6"><b>Loupe</b></p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        
+      </div>
+    </div>
+    <!--Card 3-->
+    <div class="card" style="width: 12rem;">
+      <img src="./public/img/flati-design-screenshot3.png" class="card-img-top img-thumbnail" alt="...">
+      <div class="card-body text-center bg">
+        <p class="fs-6"><b>Retro rocket</b></p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+      </div>
+    </div>
+    </div>
+    <div class="col-12">
+    </div>
   </div>
+  <!--Fin des cards-->
+</div>
 </section>
+
+<!--footer-->
 </body>
 </html>
