--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- NavBar -->
     <nav class="navbar navbar-expand-lg navbar-dark text-white" >
       <div class="container text-center">
-          <p class="navbar-brand " href="#">FLATI</p>
+          <p class="navbar-brand coucou" href="#">FLATI</p>
       </div>
       <div class="container mx-auto">
         <div class="collapse navbar-collapse align-text-top" id="navbarNavAltMarkup">
@@ -182,7 +182,42 @@
   <!--Fin des cards-->
 </div>
 </section>
+<section>
+  <!--Espace en bas-->
+<div class="container text-center">
+  <div class="row">
+    <div class="col">
+    </div>
+    <div class="col">
+      <p class="text-white fs-5">hello</p>
+    </div>
+    <div class="col"></div>
+    </div>
+  </div>
+</div>
+</section>
 
 <!--footer-->
+<footer>
+  <!--espace en haut-->
+    <!--Espace en bas-->
+<div class="container text-center">
+  <div class="row">
+    <div class="col">
+    </div>
+    <div class="col">
+      <p class="fs-3"></p>
+    </div>
+    <div class="col"></div>
+    </div>
+  </div>
+</div>
+<!--texte-->
+  <div class="text-center"> 
+    <p> <b>Get in Touch</b></p>
+    <p> We're social and we'd love to hear from you! Feel free to send us an email, find us on Google Plus,<br> follow us on Twitter and join us on Facebook</p>
+    <img src="./public/img/Screenshot 2021-01-04 at 16.47.51.png" alt="" class="footer_img">
+</div>
+</footer>
 </body>
 </html>
